--- a/app/views/application/_verify.html.haml
+++ b/app/views/application/_verify.html.haml
@@ -14,4 +14,4 @@
       = form_tag(users_path, :method => :put, :remote => true, :id => 'verify_form') do
         %p= text_field_tag(:verification_code, '', :placeholder => 'Verification Code', :class => 'input-xlarge', :id => 'verify_verification_code', :required => 'true')
         %p= submit_tag('Verify', :class => 'btn btn-primary btn-large', :id => 'verify_btn')
-      %p= link_to('Send New Code', users_path, :class => 'btn btn-large', :id => 'verify_send_code_link', :remote => true, :method => :post)
+      %p= link_to('Send New Code', users_path, :class => 'btn', :id => 'verify_send_code_link', :remote => true, :method => :post)
