--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -18,7 +18,7 @@
         %p= password_field_tag(:passwd2, '', :placeholder => 'Confirm New Password', :class => 'input-xlarge', :id => 'configure_passwd2', :required => 'true')
         %p
           = submit_tag('Set Password', :class => 'btn btn-primary btn-large', :id => 'configure_btn')
-          = link_to('Cancel', '#', :class => 'btn btn-small', :id => 'configure_cancel_btn', :style => 'display:none;')
+          = link_to('Cancel', '#', :class => 'btn', :id => 'configure_cancel_btn', :style => 'display:none;')
       = form_tag(users_path, :method => :put, :remote => true, :id => 'configure_hidden_form', :style => 'display:none;') do
         = hidden_field_tag(:api_key, '', :id => 'configure_hidden_api_key')
         = hidden_field_tag(:new_api_key, '', :id => 'configure_hidden_new_api_key')
