make copy/paste better on iphone inputs are editable now though

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -35,10 +35,10 @@
                 %td
                   .input-prepend.click-to-select
                     %span.add-on U:
-                    %input.username{ :type => :text, :name => :username, :placeholder => 'Username', :disabled => 'disabled' }
+                    %input.username{ :type => :text, :name => :username, :placeholder => 'Username' }
                   .input-prepend.input-append.click-to-select
                     %span.add-on P:
-                    %input.password{ :type => :text, :name => :password, :placeholder => 'Password', :disabled => 'disabled' }
+                    %input.password{ :type => :text, :name => :password, :placeholder => 'Password' }
                     %button.btn.password{ :type => 'button', 'data-show-password' => 'true' } Show
                 %td.edit-link
                   %button.btn.btn-primary{ :type => :submit, 'data-account-edit' => 'true' } Edit
