--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -57,7 +57,7 @@
               %span.add-on P:
               %input.password{ :type => :text, :name => :password, :placeholder => 'Password', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off' }
             %div.form-inline
-              %button.btn{ :type => 'button', 'data-password-generator' => 'true' } Generate
+              %button.btn.btn-inverse{ :type => 'button', 'data-password-generator' => 'true' } Generate
               %label.checkbox
                 %input.special-characters{ :type => 'checkbox', :checked => 'checked' }
                 %span Special Chars
