set password field to readonly while password is hidden rename logout -> clear cache rename reload -> refresh

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -52,6 +52,9 @@
     input[type='text'] {
       margin: 0;
     }
+    input.password {
+      cursor: default;
+    }
     pre.notes {
       border: none;
       padding: 5px;
