--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -1,6 +1,6 @@
 #configure.container{ :style => 'display:none;' }
   .pull-right
-    %a{ :href => '#', 'data-logout' => 'true' } Logout
+    %a{ :href => '#', 'data-clear-cache' => 'true' } Clear Cache
   .clearfix
 
   .well
