--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -1,25 +1,26 @@
 #configure.container{ :style => 'display:none;' }
   .top-links
     .pull-left
-      %button.btn.btn-warning{ 'data-wipe-data' => 'true' } Wipe Data
+      %button.btn.btn-warning{ :type => 'button', 'data-wipe-data' => 'true' } Wipe Data
+    .pull-right
+      %button#configure_cancel_btn.btn{ :type => 'button' } Cancel
     .clearfix
 
   .well
     = render 'read_only'
     %h1
-      Master Password
+      Configure
       %small#configure_email_placeholder
-    %p The Master Password is the one password you will need to remember. It is used to decrypt the rest of your individual account passwords.
+
     .pushed-down
-      %p Enter a strong master password below.
+      %h4 Master Password
+      %p The Master Password is the only password you will need to remember. It is used to decrypt the rest of your individual account passwords. Enter a strong master password below.
       %p.bold It is extremely important that you remember this password as it CANNOT be recovered!
       %form#configure_form
         %p= password_field_tag(:old_passwd, '', :placeholder => 'Current Password', :class => 'input-xlarge', :id => 'configure_old_passwd', :style => 'display:none;')
         %p= password_field_tag(:passwd, '', :placeholder => 'New Password', :class => 'input-xlarge', :id => 'configure_passwd', :required => 'true')
         %p= password_field_tag(:passwd2, '', :placeholder => 'Confirm New Password', :class => 'input-xlarge', :id => 'configure_passwd2', :required => 'true')
-        %p
-          = submit_tag('Set Password', :class => 'btn btn-primary btn-large', :id => 'configure_btn')
-          = link_to('Cancel', '#', :class => 'btn', :id => 'configure_cancel_btn', :style => 'display:none;')
+        %p= submit_tag('Set Password', :class => 'btn btn-primary btn-large', :id => 'configure_btn')
       = form_tag(users_path, :method => :put, :remote => true, :id => 'configure_hidden_form', :style => 'display:none;') do
         = hidden_field_tag(:api_key, '', :id => 'configure_hidden_api_key')
         = hidden_field_tag(:new_api_key, '', :id => 'configure_hidden_new_api_key')
