--- a/app/views/application/_verify.html.haml
+++ b/app/views/application/_verify.html.haml
@@ -1,7 +1,7 @@
 #verify.container{ :style => 'display:none;' }
   .top-links
     .pull-left
-      %button.btn.btn-warning{ 'data-wipe-data' => 'true' } Wipe Data
+      %button.btn.btn-warning{ :type => 'button', 'data-wipe-data' => 'true' } Wipe Data
     .clearfix
 
   .well
