--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -1,6 +1,10 @@
 #accounts {
   text-align: center;
 
+  #set_master_password_btn {
+    margin-left: 5px;
+  }
+
   #unlock_accounts {
     margin-top: 30px;
   }
