--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -8,6 +8,15 @@
   #unlock_accounts {
     margin-top: 30px;
   }
+
+  span.num-accounts {
+    line-height: 14px;
+    font-size: 14px;
+    font-weight: bold;
+  }
+  #add_account_btn {
+    margin-left: 5px;
+  }
 }
 
 #accounts_list_search {
