--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -12,7 +12,7 @@
 
   .well
     = render 'read_only'
-    %h1
+    %h2
       Accounts
       %small#accounts_email_placeholder
 
@@ -20,11 +20,17 @@
       %p Accounts are locked. Enter the Master Password to unlock.
       %form{ :id => 'unlock_accounts_form' }
         %p= password_field_tag(:passwd, '', :placeholder => 'Master Password', :class => 'input-xlarge', :id => 'unlock_accounts_passwd', :required => 'true')
-        %p= submit_tag('Unlock', :class => 'btn btn-primary btn-large', :id => 'unlock_accounts_btn')
+        %p= submit_tag('Unlock', :class => 'btn btn-primary', :id => 'unlock_accounts_btn')
 
   #accounts_list{ :style => 'display:none;' }
-    %p= button_tag('Add Account', :class => 'btn btn-success', :id => 'add_account_btn')
+    %p
+      %button#add_account_btn.btn.btn-success{ :type => 'button' } Add Account
     %p= text_field_tag(:search, '', :placeholder => 'Search', :autocomplete => 'off', :autocorrect => 'off', :autocapitalize => 'off', :class => 'input-xlarge', :id => 'accounts_list_search')
+    %p
+      %span.num-accounts
+        Showing
+        %span#num_accounts{ 'data-count' => 0 }
+        Accounts
     #account_tiles
       .account-tile.template.pull-left{ :style => 'display:none;' }
         .account-tile-inner
@@ -34,7 +40,8 @@
                 %tr
                   %th.account{ :colspan => '2' }
                   %th.edit-link
-                    %button.btn.btn-primary{ :type => 'button', 'data-account-edit' => 'true' } Edit
+                    %button.btn.btn-primary{ :type => 'button', 'data-account-edit' => 'true' }
+                      %i.icon-edit.icon-white
               %tbody
                 %tr
                   %td.field-label U:
