--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -8,7 +8,7 @@
 
   .well
     = render 'read_only'
-    %h1
+    %h2
       Configure
       %small#configure_email_placeholder
 
@@ -20,7 +20,7 @@
         %p= password_field_tag(:old_passwd, '', :placeholder => 'Current Password', :class => 'input-xlarge', :id => 'configure_old_passwd', :style => 'display:none;')
         %p= password_field_tag(:passwd, '', :placeholder => 'New Password', :class => 'input-xlarge', :id => 'configure_passwd', :required => 'true')
         %p= password_field_tag(:passwd2, '', :placeholder => 'Confirm New Password', :class => 'input-xlarge', :id => 'configure_passwd2', :required => 'true')
-        %p= submit_tag('Set Password', :class => 'btn btn-primary btn-large', :id => 'configure_btn')
+        %p= submit_tag('Set Password', :class => 'btn btn-primary', :id => 'configure_btn')
       = form_tag(users_path, :method => :put, :remote => true, :id => 'configure_hidden_form', :style => 'display:none;') do
         = hidden_field_tag(:api_key, '', :id => 'configure_hidden_api_key')
         = hidden_field_tag(:new_api_key, '', :id => 'configure_hidden_new_api_key')
