--- a/app/views/application/_overview.html.haml
+++ b/app/views/application/_overview.html.haml
@@ -1,10 +1,10 @@
 #overview.container{ :style => 'display:none;' }
   .well
     = render 'read_only'
-    %h1 Passmaster
-    %p A simple tool for storing all your account credentials securely with a single master password.
+    %h2 Passmaster
+    %h5 A simple tool for storing all your account credentials securely with a single master password.
     .pushed-down
       %p Just enter your email address to access your accounts, or to get started.
       = form_tag(users_path, :remote => true, :id => 'overview_form') do
         %p= email_field_tag(:email, '', :placeholder => 'Email Address', :class => 'input-xlarge', :id => 'overview_email', :required => 'true')
-        %p= submit_tag('Access Accounts', :class => 'btn btn-primary btn-large', :id => 'overview_btn')
+        %p= submit_tag('Access Accounts', :class => 'btn btn-primary', :id => 'overview_btn')
